tests/fixtures/invalid/malformed_literal.etcm
spec BrokenLiteral:
  values: list[int] = Field(default=[1, 2,)
